# dada

./: CMakeLists.txt
game/: CMakeLists.txt  game.cpp
include/GLES2/: gl2.h
include/GLES3/: gl3.h
src/dada/app/: Application.cpp  Application.h  CMakeLists.txt
src/dada/core/: CMakeLists.txt  Log.cpp  Log.h  MetaInfo.cpp  MetaInfo.h  Object.h  common.h
src/dada/geometry/: CMakeLists.txt  Matrix3f.h  Matrix3fUtils.cpp  Matrix3fUtils.h  Matrix4f.h  Matrix4fUtils.cpp  Matrix4fUtils.h  Transform3f.cpp  Transform3f.h  Vector3f.h  Vector3fUtils.cpp  Vector3fUtils.h  Vector4f.h  Vector4fUtils.cpp  Vector4fUtils.h
src/dada/gl/: CMakeLists.txt  EBO.cpp  EBO.h  GL.cpp  GL.h  Program.cpp  Program.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/dada/scene/: CMakeLists.txt  Drawable.h  Entity.cpp  Entity.h
